<resources>
    <string name="app_name">finalproject_login_signup</string>
    <string name="title_email_login">Email :</string>
    <string name="title_password_login">Password :</string>
    <string name="title_buton_login">Login</string>
    <string name="title_buton_register">Signup </string>
    <string name="title_logo_login">Hello babe, it\'s Calmpuchia</string>
    <string name="title_recommend">Recommend for you</string>
    <string name="title_product">Product</string>
    <string name="title_product_name">Product name</string>
    <string name="title_add_to_cart">Add to cart</string>
    <string name="title_buy_now">Buy now</string>
    <string name="title_description">Description</string>
    <string name="title_name">Your Name:</string>
    <string name="title_phone">Your Phone:</string>
    <!-- Base application theme -->
    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
        <item name="colorPrimary">@color/colorPrimary</item>
        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
        <item name="colorAccent">@color/colorAccent</item>
        <item name="android:windowBackground">@color/background_color</item>
        <item name="android:textColorPrimary">@color/text_primary</item>
        <item name="android:textColorSecondary">@color/text_secondary</item>
    </style>

    <!-- Custom TextInputLayout style -->
    <style name="CustomTextInputLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <item name="boxStrokeColor">@color/colorPrimary</item>
        <item name="hintTextColor">@color/colorPrimary</item>
        <item name="helperTextTextColor">@color/text_secondary</item>
        <item name="startIconTint">@color/colorPrimary</item>
        <item name="android:layout_marginStart">8dp</item>
    </style>

    <!-- Custom Button style -->
    <style name="CustomMaterialButton" parent="Widget.MaterialComponents.Button">
        <item name="backgroundTint">@color/colorPrimary</item>
        <item name="android:textColor">@android:color/white</item>
        <item name="cornerRadius">8dp</item>
    </style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_value">Value\n</string>
</resources>