<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="16dp"
    tools:context=".activity_register">


    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="App Logo"
        android:src="@drawable/ic_launcher_foreground"
        app:srcCompat="@mipmap/ic_logo_signup" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome to Calmpuchia"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#333333"
        android:layout_marginBottom="16dp" />
    <!--user name-->
    <TextView
        android:id="@+id/txtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_semibold"
        android:text="@string/title_name"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your name"
        android:inputType="text" />
    <!--user phone-->
    <TextView
        android:id="@+id/txtPhone"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:fontFamily="@font/afacad_semibold"
        android:text="@string/title_phone"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtphone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your phone number"
        android:inputType="text" />
    <!-- 📧 Email -->
    <TextView
        android:id="@+id/txtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/afacad_semibold"
        android:text="@string/title_email_login"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your email"
        android:inputType="text" />

    <!-- 🔒 Password -->
    <TextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_password_login"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Enter your password"
        android:inputType="numberPassword" />

    <!-- 👤 Nút Đăng ký -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnregister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_buton_register"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>